# gAyPI

./: .gitignore  .nvimlog  Cargo.toml  README.md
src/: errors.rs  flags.rs  main.rs  sexualities.rs  useful.rs
